Fix(maraudersmap.css): remove header letter spacing, make footer more subtle

--- a/getpost/static/css/maraudersmap.css
+++ b/getpost/static/css/maraudersmap.css
@@ -35,7 +35,6 @@ h1 {
     font-size: 40px;
     font-style: normal;
     font-weight: bold;
-    letter-spacing: 1px;
     display: inline-block;
     vertical-align: middle;
     line-height: normal;
@@ -105,13 +104,14 @@ h1 {
     bottom: 0;
     width: 100%;
     height: 40px;
-    background-color: #91002E;
+    background-color: #E0E0E6;
     line-height: 40px;
     text-align: center;
+    border-top: 1px solid #A0A0A6;
 }
 
 .footertext {
-    color: white;
+    color: black;
     font-size: 15px;
     font-family: Helvetica, sans-serif;
     font-style: italic;
